# pytzdata

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
pytzdata/: __init__.py  _timezones.py  version.py
pytzdata/commands/: app.py  make.py  zones.py
tests/: __init__.py  test_get_timezones.py  test_set_directory.py  test_tz_file.py  test_tz_path.py  test_version.py
